WIP: DI/factory architecture implementation in progress
- Added DI container with configuration management
- Implemented factory pattern for game objects, physics, and systems
- Created working demos for DI and factory functionality
- Enhanced graphic objects constructors for factory compatibility
- All foundation components tested and functional

Next: Integrate factories into main game loop to complete refactoring

--- a/.gitignore
+++ b/.gitignore
@@ -158,6 +158,10 @@ settings.local.py
 secrets.json
 .secrets
 
+# Local overrides for game configuration
+game_config.local.yaml
+config/local/
+
 # Game-specific
 *.sav
 *.save
